cmake_minimum_required(VERSION 3.19)
project(beginc C)

set(CMAKE_C_STANDARD 99)

add_executable(beginc main.c)
add_executable(pun cpama/pun.c)
add_executable(dweight cpama/dweight.c)
add_executable(dweight2 cpama/dweight2.c)
add_executable(celsius cpama/celsius.c)
add_executable(floattest cpama/floattest.c)
add_executable(tprintf cpama/tprintf.c)
add_executable(scantest cpama/scantest.c)
add_executable(addfrac cpama/addfrac.c)
add_executable(upc cpama/upc.c)
add_executable(assigntest cpama/assigntest.c)
add_executable(broker cpama/broker.c)
add_executable(statementtest cpama/statementtest.c)
add_executable(switchtest cpama/switchtest.c)
add_executable(data cpama/data.c)
add_executable(square cpama/square.c)
add_executable(sum cpama/sum.c)
add_executable(numdigit cpama/numdigit.c)
add_executable(square2 cpama/square2.c)
add_executable(square3 cpama/square3.c)
add_executable(gototest cpama/gototest.c)
add_executable(checking cpama/checking.c)
add_executable(sum2 cpama/sum2.c)
add_executable(getchartest cpama/getchartest.c)
add_executable(length cpama/length.c)
add_executable(length2 cpama/length2.c)
add_executable(converttest cpama/converttest.c)
add_executable(sizeoftest cpama/sizeoftest.c)
add_executable(reverse cpama/reverse.c)
add_executable(arraytest cpama/arraytest.c)
add_executable(repdigit cpama/repdigit.c)
add_executable(interest cpama/interest.c)
add_executable(deal cpama/deal.c)
add_executable(reverse2 cpama/reverse2.c)
add_executable(average cpama/method/average.c)
add_executable(countdown cpama/method/countdown.c)
add_executable(pun2 cpama/method/pun2.c)
add_executable(methodtest cpama/method/methodtest.c)
add_executable(prime cpama/method/prime.c)
add_executable(average2 cpama/method/average2.c)
add_executable(recursetest cpama/method/recursetest.c)
add_executable(qsort cpama/method/qsort.c)
add_executable(stack cpama/structure/stack.c)
add_executable(guess cpama/structure/guess.c)
add_executable(guess2 cpama/structure/guess2.c)
add_executable(poker cpama/structure/poker.c)
add_executable(maxmin cpama/pointer/maxmin.c)
