cmake_minimum_required(VERSION 3.19)
project(beginc C)

set(CMAKE_C_STANDARD 99)

add_executable(beginc main.c)
add_executable(pun cpama/base/pun.c)
add_executable(dweight cpama/base/dweight.c)
add_executable(dweight2 cpama/base/dweight2.c)
add_executable(celsius cpama/base/celsius.c)
add_executable(floattest cpama/base/floattest.c)
add_executable(tprintf cpama/base/tprintf.c)
add_executable(scantest cpama/base/scantest.c)
add_executable(addfrac cpama/base/addfrac.c)
add_executable(upc cpama/base/upc.c)
add_executable(assigntest cpama/base/assigntest.c)
add_executable(broker cpama/base/broker.c)
add_executable(statementtest cpama/base/statementtest.c)
add_executable(switchtest cpama/base/switchtest.c)
add_executable(data cpama/base/data.c)
add_executable(square cpama/base/square.c)
add_executable(sum cpama/base/sum.c)
add_executable(numdigit cpama/base/numdigit.c)
add_executable(square2 cpama/base/square2.c)
add_executable(square3 cpama/base/square3.c)
add_executable(gototest cpama/base/gototest.c)
add_executable(checking cpama/base/checking.c)
add_executable(sum2 cpama/base/sum2.c)
add_executable(getchartest cpama/base/getchartest.c)
add_executable(length cpama/base/length.c)
add_executable(length2 cpama/base/length2.c)
add_executable(converttest cpama/base/converttest.c)
add_executable(sizeoftest cpama/base/sizeoftest.c)
add_executable(reverse cpama/arr/reverse.c)
add_executable(arraytest cpama/arr/arraytest.c)
add_executable(repdigit cpama/arr/repdigit.c)
add_executable(interest cpama/arr/interest.c)
add_executable(deal cpama/arr/deal.c)
add_executable(reverse2 cpama/arr/reverse2.c)
add_executable(average cpama/method/average.c)
add_executable(countdown cpama/method/countdown.c)
add_executable(pun2 cpama/method/pun2.c)
add_executable(methodtest cpama/method/methodtest.c)
add_executable(prime cpama/method/prime.c)
add_executable(average2 cpama/method/average2.c)
add_executable(recursetest cpama/method/recursetest.c)
add_executable(qsort cpama/method/qsort.c)
add_executable(stack cpama/structure/stack.c)
add_executable(guess cpama/structure/guess.c)
add_executable(guess2 cpama/structure/guess2.c)
add_executable(poker cpama/structure/poker.c)
add_executable(maxmin cpama/pointer/maxmin.c)
add_executable(pointerarrtest cpama/pointer/pointerarrtest.c)
add_executable(arrsum cpama/pointer/arrsum.c)
add_executable(stack2 cpama/pointer/stack2.c)
add_executable(reverse3 cpama/pointer/reverse3.c)
add_executable(findlargest cpama/pointer/findlargest.c)
add_executable(pointermultiarray cpama/pointer/pointermultiarray.c)
add_executable(stringtest cpama/string/stringtest.c)
add_executable(readline cpama/string/readline.c)
add_executable(countspace cpama/string/countspace.c)
add_executable(strstdtest cpama/string/strstdtest.c)
add_executable(remind cpama/string/remind.c)
add_executable(strconvention cpama/string/strlenEvolution.c)
add_executable(strcpyEvolution cpama/string/strcatEvolution.c)
add_executable(strpointarrtest cpama/string/strpointerarrtest.c)
add_executable(argstest cpama/string/strargstest.c)
add_executable(planet cpama/string/planet.c)
add_executable(parammacro cpama/macro/parammacro.c)
add_executable(concompile cpama/macro/concompile.c)
add_executable(includetest cpama/program/includetest/share.c cpama/program/includetest/includetest.c)
add_executable(justify cpama/program/justify/word.h cpama/program/justify/line.h cpama/program/justify/word.c cpama/program/justify/line.c cpama/program/justify/justify.c)
